# multiclass-graph-based-classifiers-tnnls-2024

./: Dockerfile  README.md  pyproject.toml  requirements.txt
data/: README.md
results_bkp/ablation_study/params_q_hk/: abalone_18vs9.txt  appendicitis.txt  australian.txt  banknote.txt  breastcancer_original.txt  breastcancer_prognostic.txt  climate.txt  fertility.txt  glass_7vsall.txt  haberman.txt  heart.txt  ilpd.txt  ionosphere.txt  parkinsons.txt  vehicle_vanvsall.txt  yeast_5vsall.txt  yeast_9vs1.txt
results_bkp/ablation_study/params_q_hktanh/: abalone_18vs9.txt  appendicitis.txt  australian.txt  banknote.txt  breastcancer_original.txt  breastcancer_prognostic.txt  climate.txt  fertility.txt  glass_7vsall.txt  haberman.txt  heart.txt  ilpd.txt  ionosphere.txt  parkinsons.txt  vehicle_vanvsall.txt  yeast_5vsall.txt  yeast_9vs1.txt
results_bkp/ablation_study/params_qd_hk/: abalone_18vs9.txt  appendicitis.txt  australian.txt  banknote.txt  breastcancer_original.txt  breastcancer_prognostic.txt  climate.txt  fertility.txt  glass_7vsall.txt  haberman.txt  heart.txt  ilpd.txt  ionosphere.txt  parkinsons.txt  vehicle_vanvsall.txt  yeast_5vsall.txt  yeast_9vs1.txt
scripts/gen_figs/: act_fun_analysis.py  analysis_filter.py  gg_formulation.py  graphical_abstract.py  is_gg.py  plot_ssvs_ses.py  sigma_changes3d.py  sigma_tuned.py  study_quality.py  study_recgg_time.py  venn.py
scripts/tables/: ablation_study.py  gen_latex_table.py  gg_baselines.py  gg_comp.py  multiclass.py
src/main/: __init__.py  hyperparameters_spaces.py  set_seed.py
src/main/models/: ResNet.py  (+2 more)
(+332 files in other folders)
