[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiclass-graph-based-classifiers-tnnls-2024"
version = "0.1.0"
description = "Code for multiclass graph-based large margin classifiers."
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
